SigmaCodebackup3rdSep/objects/Shipment_Products__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For survey responces</description>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logistic__c</fullName>
        <formula>Shipment__r.Account__r.Name</formula>
        <label>Logistic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Products (Merchant Account)</relationshipLabel>
        <relationshipName>Shipment_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orderd_Quantity__c</fullName>
        <label>Orderd Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Package__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Delivered, Returned</value>
            </filterItems>
            <filterItems>
                <field>Package__c.Status__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Products (Parent Account)</relationshipLabel>
        <relationshipName>Shipment_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Delivery_Date__c</fullName>
        <label>Shipment Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Shipment Products</relationshipLabel>
        <relationshipName>Shipment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Ship</fullName>
                    <default>true</default>
                    <label>Ready To Ship</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shipment Product</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Shipment Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>